--- a/teacher.html
+++ b/teacher.html
@@ -81,6 +81,9 @@ classListEl.addEventListener("click", e => {
 });
 
 loadDashboard();
+  console.log("Stored class_id:", localStorage.getItem("class_id"));
+console.log("Stored subject_id:", localStorage.getItem("subject_id"));
+console.log("Stored academic_year:", localStorage.getItem("academic_year"));
 </script>
 </body>
 </html>
