--- a/assessment-students.html
+++ b/assessment-students.html
@@ -144,6 +144,10 @@ const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr =>
   const { error } = await supabase.from("assessment_results").insert(rows);
   document.getElementById("status").innerText = error ? `Error saving: ${error.message}` : "Assessment saved successfully!";
 };
+
+  console.log("Stored class_id:", localStorage.getItem("class_id"));
+console.log("Stored subject_id:", localStorage.getItem("subject_id"));
+console.log("Stored academic_year:", localStorage.getItem("academic_year"));
 </script>
 
 </body>
