--- a/assessment-students.html
+++ b/assessment-students.html
@@ -36,7 +36,7 @@
 <table>
   <thead>
     <tr>
-      <th>Adm/UPI</th>
+      <th>Adm/Assess NO.</th>
       <th>Name</th>
       <th>Assessment Type</th>
       <th>Performance Level</th>
