--- a/assessment-students.html
+++ b/assessment-students.html
@@ -36,7 +36,7 @@
 <table>
   <thead>
     <tr>
-      <th>Adm/Assess NO.</th>
+      <th>Adm/Assess No.</th>
       <th>Name</th>
       <th>Assessment Type</th>
       <th>Performance Level</th>
@@ -80,15 +80,12 @@ document.getElementById("subjectLabel").innerText = subjectData?.name || "N/A";
 
 // Load terms
 const { data: terms } = await supabase.from("terms").select("id, name");
-
 const termSelect = document.getElementById("termSelect");
-
 termSelect.innerHTML = `
   <option value="" disabled selected>-- Select Term --</option>
-  ${terms.map(t => `
-    <option value="${t.id}">${t.name}</option>
-  `).join("")}
+  ${terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("")}
 `;
+
 // Load assessment types & achievement levels
 const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name");
 const { data: levels } = await supabase.from("achievement_levels").select("id, label").order("order_rank");
@@ -129,51 +126,54 @@ document.getElementById("saveAssessment").onclick = async () => {
   const strand = document.getElementById("strandInput").value;
   const substrand = document.getElementById("substrandInput").value;
 
+  if (!termId) {
+    document.getElementById("status").innerText = "Please select a term.";
+    return;
+  }
 
-const { data: { user } } = await supabase.auth.getUser();
-if (!user) { window.location.href = "index.html"; throw new Error("Not logged in"); }
+  const { data: { user } } = await supabase.auth.getUser();
+  if (!user) { window.location.href = "index.html"; throw new Error("Not logged in"); }
 
-// ... later, inside saveAssessment:
-// Create a new assessment for this class + subject + term
-const { data: newAssessment, error: assessError } = await supabase
-  .from("assessments")
-  .insert([{
+  // 1️⃣ Create parent assessment
+  const { data: newAssessment, error: assessError } = await supabase
+    .from("assessments")
+    .insert([{
+      subject_id: subjectId,
+      class_id: classId,
+      term_id: termId,
+      academic_year: academicYear,
+      teacher_id: user.id,
+      created_by: user.id
+    }])
+    .select("id")
+    .single();
+
+  if (assessError || !newAssessment) {
+    document.getElementById("status").innerText = "Error creating assessment: " + (assessError?.message || "Unknown");
+    return;
+  }
+
+  const assessmentId = newAssessment.id;
+
+  // 2️⃣ Prepare student assessment rows
+  const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr => ({
+    assessment_id: assessmentId,
+    student_id: tr.dataset.id,
     subject_id: subjectId,
-    class_id: classId,
     term_id: termId,
+    assessment_type_id: tr.querySelector(".assessmentType").value,
+    achievement_level_id: tr.querySelector(".performanceLevel").value,
+    strand,
+    substrand,
     academic_year: academicYear,
     teacher_id: user.id,
     created_by: user.id
-  }])
-  .select("id")
-  .single();
+  }));
 
-if (assessError || !newAssessment) {
-  document.getElementById("status").innerText = "Error creating assessment: " + assessError.message;
-  return;
-}
-
-const assessmentId = newAssessment.id;
-
-// Now insert assessment_results
-const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr => ({
-  assessment_id: assessmentId,   // ✅ use the real ID
-  student_id: tr.dataset.id,
-  subject_id: subjectId,       
-  term_id: termId,
-  assessment_type_id: tr.querySelector(".assessmentType").value,
-  achievement_level_id: tr.querySelector(".performanceLevel").value,
-  strand,
-  substrand,
-  academic_year: academicYear,
-  teacher_id: user.id,
-  created_by: user.id
-}));
-
-const { error } = await supabase.from("assessment_results").insert(rows);
-document.getElementById("status").innerText = error ? `Error saving: ${error.message}` : "Assessment saved successfully!";
-}
- 
+  // 3️⃣ Insert all results
+  const { error } = await supabase.from("assessment_results").insert(rows);
+  document.getElementById("status").innerText = error ? `Error saving: ${error.message}` : "Assessment saved successfully!";
+};
 </script>
 
 </body>
