--- a/assessment-students.html
+++ b/assessment-students.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>New Assessment Table</title>
+<title>Assessment Students</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 20px; }
   table { border-collapse: collapse; width: 100%; margin-top: 20px; }
   th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
   th { background: #f0f0f0; }
-  select, input { width: 100%; }
+  select { width: 100%; }
   button { margin-top: 15px; padding: 8px 12px; cursor: pointer; }
 </style>
 </head>
@@ -51,8 +51,6 @@
 <button id="saveAssessment">Save Assessment</button>
 <p id="status"></p>
 
-
-
 <script type="module">
 import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
@@ -64,7 +62,6 @@ const supabase = createClient(
 const SYSTEM_YEAR = 2026;
 document.getElementById("yearLabel").innerText = SYSTEM_YEAR;
 
-// ✅ Get selections from previous page
 const classId = localStorage.getItem("class_id");
 const subjectId = localStorage.getItem("subject_id");
 const academicYear = localStorage.getItem("academic_year") || SYSTEM_YEAR;
@@ -74,52 +71,36 @@ if (!classId || !subjectId) {
   window.location.href = "teacher-dashboard.html";
 }
 
-// ----------------------
-// 0️⃣ Auth & profile
-// ----------------------
-const { data: { user }, error: userError } = await supabase.auth.getUser();
-if (!user) {
-  window.location.href = "index.html";
-  throw new Error("Not logged in");
-}
+// Get logged-in user & profile
+const { data: { user } } = await supabase.auth.getUser();
+if (!user) { window.location.href = "index.html"; throw new Error("Not logged in"); }
 
-// Fetch full profile to get school_id
-const { data: profile, error: profileError } = await supabase
+const { data: profile } = await supabase
   .from("profiles")
-  .select("id, full_name, role, school_id")
+  .select("id, school_id")
   .eq("auth_id", user.id)
   .single();
 
-if (profileError) throw profileError;
-
+if (!profile?.school_id) throw new Error("Cannot determine school_id. Ensure your profile has a school assigned.");
 const schoolId = profile.school_id;
-if (!schoolId) throw new Error("Cannot determine school_id. Ensure your profile has a school assigned.");
 
-// ----------------------
-// 1️⃣ Display class & subject names
-// ----------------------
+// Load class and subject names
 const { data: classData } = await supabase.from("classes").select("name").eq("id", classId).single();
 const { data: subjectData } = await supabase.from("subjects").select("name").eq("id", subjectId).single();
+
 document.getElementById("classLabel").innerText = classData?.name || "N/A";
 document.getElementById("subjectLabel").innerText = subjectData?.name || "N/A";
 
-// ----------------------
-// 2️⃣ Load terms, assessment types & levels
-// ----------------------
+// Load terms
 const { data: terms } = await supabase.from("terms").select("id, name");
 const termSelect = document.getElementById("termSelect");
+termSelect.innerHTML = `<option value="" disabled selected>-- Select Term --</option>` + terms.map(t=>`<option value="${t.id}">${t.name}</option>`).join("");
 
-termSelect.innerHTML = `
-  <option value="" disabled selected>-- Select Term --</option>
-  ${terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("")}
-`;
-
+// Load assessment types & achievement levels
 const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name");
 const { data: levels } = await supabase.from("achievement_levels").select("id, label").order("order_rank");
 
-// ----------------------
-// 3️⃣ Load students
-// ----------------------
+// Load students
 const { data: students } = await supabase
   .from("students")
   .select("id, admission_number, first_name, last_name")
@@ -149,20 +130,17 @@ if (!students?.length) {
 `).join("");
 }
 
-// ----------------------
-// 4️⃣ Save assessment
-// ----------------------
+// Save assessment
 document.getElementById("saveAssessment").onclick = async () => {
-  const termId = termSelect.value;
+  const termId = document.getElementById("termSelect").value;
   const strand = document.getElementById("strandInput").value;
   const substrand = document.getElementById("substrandInput").value;
 
-  if (!termId) {
-    document.getElementById("status").innerText = "Please select a term.";
-    return;
-  }
+  // Get first student's assessment type for main assessment row
+  const firstTypeId = document.querySelector("#studentsBody tr .assessmentType")?.value;
+  if (!firstTypeId) { document.getElementById("status").innerText = "Select an assessment type for at least one student"; return; }
 
-  // ✅ 4a: create the assessment first
+  // Create assessment row
   const { data: assessment, error: assessmentError } = await supabase
     .from("assessments")
     .insert([{
@@ -171,26 +149,25 @@ document.getElementById("saveAssessment").onclick = async () => {
       school_id: schoolId,
       term_id: termId,
       academic_year: academicYear,
+      assessment_type_id: firstTypeId,
       created_by: user.id
     }])
     .select()
     .single();
 
-  if (assessmentError) {
-    document.getElementById("status").innerText = `Error creating assessment: ${assessmentError.message}`;
-    return;
+  if (assessmentError) { 
+    document.getElementById("status").innerText = `Error creating assessment: ${assessmentError.message}`; 
+    return; 
   }
 
-  const assessmentId = assessment.id;
-
-  // ✅ 4b: prepare rows for assessment_results
+  // Insert student assessment results
   const rows = Array.from(document.querySelectorAll("#studentsBody tr")).map(tr => ({
-    assessment_id: assessmentId,
+    assessment_id: assessment.id,
     student_id: tr.dataset.id,
-    subject_id: subjectId,       
+    subject_id: subjectId,
     term_id: termId,
     assessment_type_id: tr.querySelector(".assessmentType").value,
-    achievement_level_id: tr.querySelector(".performanceLevel").value,
+    achievement_level_id: tr.querySelector(".performanceLevel").value || null,
     strand,
     substrand,
     academic_year: academicYear,
@@ -198,11 +175,10 @@ document.getElementById("saveAssessment").onclick = async () => {
     created_by: user.id
   }));
 
-  // ✅ 4c: insert results
-  const { error: insertError } = await supabase.from("assessment_results").insert(rows);
+  const { error: resultError } = await supabase.from("assessment_results").insert(rows);
 
-  document.getElementById("status").innerText = insertError 
-    ? `Error saving: ${insertError.message}` 
+  document.getElementById("status").innerText = resultError 
+    ? `Error saving assessment results: ${resultError.message}`
     : "Assessment and results saved successfully!";
 };
 </script>
